--- a/LandCollectionProject/binder/templates/index.html
+++ b/LandCollectionProject/binder/templates/index.html
@@ -1,6 +1,55 @@
-<h1>index</h1>
-{% for binders in context%}
+{% extends 'base.html' %}
 
-{% include "binders.html" %}    
+{% block content %}
+<script type="text/javascript">
 
+function paginate (context, modifier){
+    volume = $(context).siblings('.volume').first().text();
+    binder = $(context).siblings('.binder').first().text();
+    page = $(context).siblings('.page').first().text();
+    intPage = parseInt(page) + modifier
+    $.ajax(
+    {
+        type:"GET",
+        url: "/binder/"+binder+"/volume/"+volume+"/page/"+intPage,
+        data:{"embedded": "True"},
+        success: function( data ) 
+        {
+            present =  $(context).parent()
+            present.empty();
+            present.html(data);
+        }
+     });
+};
+
+$(document).ready(function() {
+    $('.present').on('click', '.previous', function(){
+        paginate(this, -1);
+    });
+    $('.present').on('click', '.next', function(){
+        paginate(this, 1);
+    });
+});
+
+
+
+</script>
+{% for binders in items %}
+<div class="collection">
+    {% for context in binders %}
+    <div class="present">
+        {% include "pageEmbed.html" %}
+        {% if context.has_previous%}
+        <button class="previous">previous</button>
+        {% endif %}
+        {% if context.has_next %}
+        <button class="next">next</button>
+        {% endif %}
+    </div>
+    {% endfor %}
+</div>
 {% endfor %}
+
+{% endblock content%}
+
+
