--- a/LandCollectionProject/templates/row.html
+++ b/LandCollectionProject/templates/row.html
@@ -1,3 +1,11 @@
+{% extends 'base.html' %}
+{% block content %}
+
+
+
+
+
+
 
 <h2>{{row.name}}</h2>
 <table>
@@ -9,3 +17,6 @@
 {% endfor %}
 </tr>
 </table>
+
+{% endblock content %}
+
