--- a/LandCollectionProject/binder/templates/binders.html
+++ b/LandCollectionProject/binder/templates/binders.html
@@ -1,53 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<script type="text/javascript">
 
-function paginate (context, modifier){
-    volume = $(context).siblings('.volume').first().text();
-    binder = $(context).siblings('.binder').first().text();
-    page = $(context).siblings('.page').first().text();
-    intPage = parseInt(page) + modifier
-    $.ajax(
-    {
-        type:"GET",
-        url: "/binder/"+binder+"/volume/"+volume+"/page/"+intPage,
-        data:{"embedded": "True"},
-        success: function( data ) 
-        {
-            present =  $(context).parent()
-            present.empty();
-            present.html(data);
-        }
-     });
-};
+{% include 'header.html' %}
 
-$(document).ready(function() {
-    $('.present').on('click', '.previous', function(){
-        paginate(this, -1);
-    });
-    $('.present').on('click', '.next', function(){
-        paginate(this, 1);
-    });
-});
-
-
-
-</script>
-
+<div id="main" class="main" role="main">
+{% for n in context.volumes %}
     
-{% for context in binders %}
-<div class="present">
-{% include "pageEmbed.html" %}
-{% if context.has_previous%}
-<button class="previous">previous</button>
-{% endif %}
-{% if context.has_next %}
-<button class="next">next</button>
-{% endif %}
-</div>
-{% endfor %}
-
-{% endblock content%}
-
+    <div class="card-profile">
+        <div class="inner-flex">
+      
+      
+            <a href="{% url 'byPage' context.binder forloop.counter 1 %}">
+      
+            <div class="card-grid-item " >
+                Volume {{forloop.counter}}
+            </div>
+        </a>
+        </div>
+    </div>
+    {% endfor %}
+    </div>
+    {% endblock content%}
+    
 
