--- a/LandCollectionProject/binder/templates/index.html
+++ b/LandCollectionProject/binder/templates/index.html
@@ -1,55 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<script type="text/javascript">
 
-function paginate (context, modifier){
-    volume = $(context).siblings('.volume').first().text();
-    binder = $(context).siblings('.binder').first().text();
-    page = $(context).siblings('.page').first().text();
-    intPage = parseInt(page) + modifier
-    $.ajax(
-    {
-        type:"GET",
-        url: "/binder/"+binder+"/volume/"+volume+"/page/"+intPage,
-        data:{"embedded": "True"},
-        success: function( data ) 
-        {
-            present =  $(context).parent()
-            present.empty();
-            present.html(data);
-        }
-     });
-};
+{% include 'header.html' %}
 
-$(document).ready(function() {
-    $('.present').on('click', '.previous', function(){
-        paginate(this, -1);
-    });
-    $('.present').on('click', '.next', function(){
-        paginate(this, 1);
-    });
-});
+<div id="main" class="main" role="main">  
 
+{% for binder in context %}
 
-
-</script>
-{% for binders in items %}
-<div class="collection">
-    {% for context in binders %}
-    <div class="present">
-        {% include "pageEmbed.html" %}
-        {% if context.has_previous%}
-        <button class="previous">previous</button>
-        {% endif %}
-        {% if context.has_next %}
-        <button class="next">next</button>
-        {% endif %}
+<div class="card-profile">
+    <div class="inner-flex">
+  
+  
+  
+        <a href="{% url 'byBinder' binder.name%}">
+  
+        <div class="card-grid-item " >
+            {{binder.name}}
+        </div>
+    </a>
     </div>
-    {% endfor %}
 </div>
 {% endfor %}
-
+</div>
 {% endblock content%}
 
 
