--- a/LandCollectionProject/card/templates/card.html
+++ b/LandCollectionProject/card/templates/card.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+
 
     <p>{{card.name}}</p>
     <p>{{card.type_line}}</p>
@@ -5,5 +7,8 @@
     
     <img src={{card.image_uris.normal}}>
 
-
+<div class="details">
+ {% include "cardText.html"%}
+ {% include "printDetails.html"%}
+</div>
 
