--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 {% block default_scripts %}
 {% load static %}
 <script src="{% static 'default.js' %}"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 {% endblock %}
 
     {% block scripts %}
