mobile nav fixed

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -13,6 +13,15 @@
     </a>
      <div class="header-link-divider"></div> 
 </div> 
+<button type="button" class="header-menu-button-container">
+    <span class="button-n inverted header-menu-button">
+        <svg width="30" height="30" viewBox="0 0 30 30" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+            <path d="M2 4v2h26v-2h-26zm0 12h26v-2h-26v2zm0 10h26v-2h-26v2z"></path>
+        </svg> 
+        <b class="header-menu-button-label">Menu</b>
+    </span>
+</button>
 </div>
+<div class="mobile-nav" style="display: none;"> <a href="/binders" class="button-n inverted align-left"> <b>Binders</b></a> <a href="/random" class="button-n inverted align-left"> <b>Random Card</b></a></div>
 </div>
 
