--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -22,6 +22,6 @@
     </span>
 </button>
 </div>
-<div class="mobile-nav" style="display: none;"> <a href="/binders" class="button-n inverted align-left"> <b>Binders</b></a> <a href="/random" class="button-n inverted align-left"> <b>Random Card</b></a></div>
+<div class="mobile-nav" style="display: none;"> <a href="/binder" class="button-n inverted align-left"> <b>Binders</b></a> <a href="/random" class="button-n inverted align-left"> <b>Random Card</b></a></div>
 </div>
 
